--- a/estiloIndex.css
+++ b/estiloIndex.css
@@ -1,23 +1,26 @@
 *{
     box-sizing: border-box;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 body{
-    margin: 0;
-    height: 100vh;
+    margin: 0%;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
 }
 
 #fondo{
-    min-height: 100vh;
+    height: 100%;
     position: relative;
+    display: flexbox;
 }
 
 video{
     position: absolute;
     top: 0;
     width: 100%;
-    height: 160vh;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -111,30 +114,37 @@ hr{
     background-color: rgb(212, 51, 113);
 }
 
+.tenis{
+    width: 600px;
+    margin-left: 50%;
+}
+.naturaleza{
+    width: 600px;
+    margin-left: 50%;
+}
 .parrafo-1{
     color: #3feb39;
     z-index: 2;
     position: relative;
+    font-size: x-large;
     padding-right: 0%;
     text-align: left;
-    border: 2px solid #D36B00;
+    border: 7px double #D36B00;
 }
 .parrafo-2{
     color: aqua;
+    font-size: x-large;
     z-index: 2;
     position: relative;
-    padding-right: 0%;
-    text-align: right;
-    border: 2px solid #D36B00;
+    text-align: right;  
 }
 
 .parrafo-3{
     color: rgb(251, 132, 255);
     z-index: 2;
     position: relative;
-    padding-right: 0%;
+    font-size: x-large;
     text-align: right;
-    border: 2px solid #D36B00;
 }
 
 footer {
@@ -148,13 +158,49 @@ footer {
     align-items: center;
     flex-direction: column;
 }
-@media (max-width: 450px)
+@media (max-width: 700px)
 {
     .flex-main{
         flex-direction: column;
     }
     .enlaces{
         flex-direction: column;
+    }
+    .foto{
+        align-items: center;
+        margin-left: 30%;
+    }
+    .tenis{
+        width: 500px;
+        margin-left: 8%;
+    }
+    .naturaleza{
+        width: 500px;
+        margin-left: 8%;
+    }
+    .parrafo-1{
+        color: #3feb39;
+        z-index: 2;
+        position: relative;
+        font-size:  x-large;
+        padding-right: 0%;
+        text-align: left;
+        border: 7px double #D36B00;
+    }
+    .parrafo-2{
+        color: aqua;
+        font-size:  x-large;
+        z-index: 2;
+        position: relative;
+        text-align: right;
+    }
+    
+    .parrafo-3{
+        color: rgb(251, 132, 255);
+        z-index: 2;
+        position: relative;
+        font-size: x-large;
+        text-align: right;
     }
 }
 .Redes-Sociales{
@@ -178,6 +224,18 @@ footer {
     background-size: 80%;
     background-repeat: no-repeat;
     margin: 1rem;
+}
+
+.frase{
+    position: relative;
+    z-index: 2;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: xx-large;
+    color: crimson;
+    text-align: center;
+    text-decoration: underline aqua;
+    text-overflow: ellipsis;
+    text-shadow: #3feb39;
 }
 
 .Icono:hover {
