--- a/estiloIndex.css
+++ b/estiloIndex.css
@@ -1,219 +1,40 @@
 *{
     box-sizing: border-box;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 body{
     margin: 0%;
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: column;
-}
-
-#fondo{
-    height: 100%;
-    position: relative;
-    display: flexbox;
-}
-
-video{
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-hr{
-    position: relative;
-    z-index: 2;
-}
-
-#Inicio{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.nombre{
-    color: aqua;
-    padding-top: 1px;
-    position: relative;
-    z-index: 2;
-    width: 60%;
-    margin: auto;
-    text-align: center;
-    font-size: large;
-}
-
-.tittle{
-    font-size: 50px;
-    color: coral;
-}
-
-.foto{
-    position: absolute;
-    padding-top: 0%;
-    z-index: 2;
-    height: 200px;
-    width: 240px;
-    padding-left: 0%;
-    border: 7px double rgb(122, 202, 255);
-}
-
-.flex-header{
-    padding: 2rem;
-    flex-basis: 0%;
-    flex-grow: 0;
-    flex-shrink: 1;
-} 
-.flex-main{
-    flex-basis: 0%;
-    flex-grow: 0;
-    flex-shrink: 1;
-    display: flex;
     flex-direction: row;
-    border-right: 2px dashed gray;
-    padding-right: 3%;
 }
 
-.flex-nav{
-    flex-basis: 0%;
-    flex-grow: 0.2;
-    flex-shrink: 1;
+.contenedor{
+    width: 100vw;
+    height: 300vh;
+    background-color: #0A043C;
 }
-
-.flex-article{
-    flex-basis: 0%;
-    flex-grow: 1;
-    flex-shrink: 1;
-}
-
-.correo{
-    color: chartreuse;
-}
-
-.enlaces {
-    display: flex;
-    margin: auto;
-    flex-grow: 1;
-}
-
-.enlaces li{
-    display: inline-flex;
-    width: auto;
-}
-
-.enlaces li a {
-    text-decoration: none;
-    font-size: 20px;
-    padding: 10px 70px;
-    color: rgb(251, 255, 0);
-    display: flex;
-}
-
-.enlaces li a:hover{
-    background-color: rgb(212, 51, 113);
-}
-
-.tenis{
-    width: 600px;
-    margin-left: 50%;
-}
-.naturaleza{
-    width: 600px;
-    margin-left: 50%;
-}
-.parrafo-1{
-    color: #3feb39;
-    z-index: 2;
-    position: relative;
-    font-size: x-large;
-    padding-right: 0%;
-    text-align: left;
-    border: 7px double #D36B00;
-}
-.parrafo-2{
+.titulo{
+    height: 10%;
+    text-align: center;
     color: aqua;
-    font-size: x-large;
-    z-index: 2;
-    position: relative;
-    text-align: right;  
 }
-
-.parrafo-3{
-    color: rgb(251, 132, 255);
-    z-index: 2;
-    position: relative;
-    font-size: x-large;
-    text-align: right;
+.nombre{
+    text-align: center;
+    color: rgb(255, 27, 225);
+    padding-left: 10%;
+    padding-right: 10%;
+    align-items: center;
 }
-
-footer {
-    width: 84%;
-    position: relative;
-    bottom: 0;
-    left: 0;
-    padding: 11rem 8%;
+.redesSociales{
     display: flex;
     justify-content: center;
+    flex-direction: row;
     align-items: center;
-    flex-direction: column;
-}
-@media (max-width: 700px)
-{
-    .flex-main{
-        flex-direction: column;
-    }
-    .enlaces{
-        flex-direction: column;
-    }
-    .foto{
-        align-items: center;
-        margin-left: 30%;
-    }
-    .tenis{
-        width: 500px;
-        margin-left: 8%;
-    }
-    .naturaleza{
-        width: 500px;
-        margin-left: 8%;
-    }
-    .parrafo-1{
-        color: #3feb39;
-        z-index: 2;
-        position: relative;
-        font-size:  x-large;
-        padding-right: 0%;
-        text-align: left;
-        border: 7px double #D36B00;
-    }
-    .parrafo-2{
-        color: aqua;
-        font-size:  x-large;
-        z-index: 2;
-        position: relative;
-        text-align: right;
-    }
-    
-    .parrafo-3{
-        color: rgb(251, 132, 255);
-        z-index: 2;
-        position: relative;
-        font-size: x-large;
-        text-align: right;
-    }
-}
-.Redes-Sociales{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    position: relative;
     flex-wrap: wrap;
-    padding-left: 20%;
-    z-index: 2;
-    position: relative;
 }
-
 .Icono{
     background-color: #f2f2f2;
     height: 50px;
@@ -225,24 +46,10 @@ footer {
     background-repeat: no-repeat;
     margin: 1rem;
 }
-
-.frase{
-    position: relative;
-    z-index: 2;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: xx-large;
-    color: crimson;
-    text-align: center;
-    text-decoration: underline aqua;
-    text-overflow: ellipsis;
-    text-shadow: #3feb39;
-}
-
-.Icono:hover {
+.Icono:hover{
     background-color: white;
     filter: invert(1);
 }
-
 .Icono:nth-of-type(1) {
     background-image: url(gmail.png);
 }
@@ -258,29 +65,200 @@ footer {
 .Icono:nth-of-type(4) {
     background-image: url(Whatsapp.png);
 }
-
-.foto-1{
-    width: 33.5%;
+/* Contenedor Arriba */
+.menu{
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: #d17225;
+    border: 4px double #85e9e0;
 }
-.foto-2{
-    width: 20%;
+.menu a{
+    text-decoration: none;
+    color: aliceblue;
 }
-.foto-3{
-    width: 20%;
+.menu a:hover{
+    background-color: #558ffc;
+    box-shadow: #6acdd4 -1px 1px, #6acdd4 -2px 2px, #6acdd4 -3px 3px, #6acdd4 -4px 4px, #6acdd4 -5px 5px, #6acdd4 -6px 6px;
+    transform: translate3d(6px, -6px, 0);
+    font-weight: bold;
+    transition-delay: 0s;
+        transition-duration: 0.4s;
+        transition-property: all;
+    transition-timing-function: line;
+}
+.itemMenu1{
+    width: 33%;
+}
+.itemMenu2{
+    width: 33%;
+}
+.itemMenu3{
+    width: 34%;
+}
+.contendorAbajoDelaInformacion{
+    height: 70%;
+}
+.contendorFotoPefil{
+    display: flex;
+    height: 25%;
+    align-items: center;
+    justify-content: center;
+    background-color: #C84B31;
+}
+.textoPerfil{
+    color: white;
+    text-align: center;
+    font-size: x-large;
+    width: 50%;
+}
+.fotoPerfil{
+    align-items: center;
+    width: 50%;
+}
+/* Contenedor 1 */
+.contenedor1{
+    height: 25%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #346751;
+}
+.textoContenedor1{
+    text-align: right;
+    color: rgb(223, 255, 42);
+    font-size: x-large;
+    width: 50%;
+}
+.textoPerfil{
+    width: 50%;
+    text-align: left;
+}
+.fotoTenis{
+    text-align: center;
+    width: 50%;
+}
+/* Contenedor 2 */
+.contenedor2{
+    height: 25%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.fotoNaturaleza{
+    width: 50%;
+}
+.textoContenedor2{
+    text-align: left;
+    color: rgb(255, 184, 53);
+    font-size: x-large;
+    width: 50%;
+}
+.contenedor3{
+    height: 25%;
+}
+.videofondo{
     height: 20%;
 }
-.foto-4{
-    width: 75%;
+.video{
+    height: 80%;
 }
-.foto-5{
-    width: 75%;
+.frase{
+    height: 20%;
+    color: rgb(231, 95, 95);
+    font-size: xx-large;
+    text-align: center;
+    text-decoration: underline aqua;
 }
-.foto-6{
+
+.slider{
+    width: 100%;
+    margin: auto;
+    overflow: hidden;
+    height: 150%;
+}
+.slider ul{
+    display: flex;
+    padding: 0;
+    width: 800%;
+
+    animation: cambio 20s infinite alternate;
+}
+.slider li{
+    list-style: none;
+    width: 100%;
+}
+.slider img{
     width: 40%;
+    height: 40%;
+    align-items: center;
+    justify-content: center;
 }
-.foto-7{
-    width: 40%;
+.parrafofinal{
+    padding-bottom: 100%;
 }
-.foto-8{
-    width: 90%;
+
+@keyframes cambio{
+    0% {margin-left: 0;}
+    20% {margin-left: 0;}
+
+    25%{margin-left: -100%;}
+    45%{margin-left: -100%;}
+
+    50%{margin-left: -200%;}
+    70%{margin-left: -200%;}
+
+    75%{margin-left: -300%;}
+    100%{margin-left: -300%;}
+}
+
+@media screen and (max-width: 1000px){
+    body{
+        flex-direction: column;
+    }
+    .contendorFotoPefil{
+        display: flex;
+        margin: 0;
+    }
+    .textoPerfil{
+        font-size: medium;
+    }
+    .textoContenedor1{
+        font-size: medium;
+    }
+    .textoContenedor2{
+        font-size: medium;
+    }
+    .redesSociales{
+        justify-content: center;
+        align-items: center;
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+    .slider{
+        width: 100%;
+        margin: auto;
+        overflow: hidden;
+        height: 150%;
+    }
+    .slider ul{
+        display: flex;
+        padding: 0;
+        width: 800%;
+    
+        animation: cambio 20s infinite alternate;
+    }
+    .slider li{
+        list-style: none;
+        width: 100%;
+    }
+    .slider img{
+        width: 60%;
+        height: 46%;
+        align-items: center;
+        justify-content: center;
+    }
 }
