--- a/estiloIndex.css
+++ b/estiloIndex.css
@@ -182,7 +182,6 @@ body{
     font-size: xx-large;
     text-align: center;
 }
-
 .slider{
     width: 100%;
     margin: auto;
@@ -233,7 +232,7 @@ body{
         margin: 0;
     }
     .textoPerfil{
-        font-size: medium;
+        font-size: small;
     }
     .textoContenedor1{
         font-size: medium;
@@ -251,7 +250,7 @@ body{
         width: 100%;
         margin: auto;
         overflow: hidden;
-        height: 150%;
+        height: 120%;
     }
     .slider ul{
         display: flex;
@@ -265,8 +264,8 @@ body{
         width: 100%;
     }
     .slider img{
-        width: 60%;
-        height: 46%;
+        width: 62%;
+        height: 50%;
         align-items: center;
         justify-content: center;
     }
